discussion/kv_engine/124821/124821_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37921: Update check_privilege to take optional sid/cid

For kv-engine we have places where we need to do privilege
checking of a collection, scope or bucket, updating the
API to allow for optional scope/collection gives us the
API for our checking needs.

Change-Id: Id6fd0a5164943ba6f645278249672258844ce087

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-03 14:35:06.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-03 15:06:26.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27306/ : FAILURE

Compile error at ..\kv_engine\daemon\cookie.cc(626): error C3861: "checkPrivilegeFailed": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27306/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23355/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/cookie.cc:626:15:
error: use of undeclared identifier "checkPrivilegeFailed"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23355/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1536/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie.cc:626:15: error: use of undeclared identifier "checkPrivilegeFailed" [clang-diagnostic-error]
        ret = checkPrivilegeFailed(ctx, privilege);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie.cc:632:35: error: out-of-line definition of "checkPrivilegeFailed" does not match any declaration in "Cookie" [clang-diagnostic-error]
cb::rbac::PrivilegeAccess Cookie::checkPrivilegeFailed(
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1536/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie.cc:626:15:
error: use of undeclared identifier "checkPrivilegeFailed" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1536/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2935/ : FAILURE

Compile error at [2020-04-03T14:41:58.658Z] ../kv_engine/daemon/cookie.cc:626:15:
error: ?checkPrivilegeFailed? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2935/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2992/ : FAILURE

Compile error at [2020-04-03T14:38:25.343Z] ../kv_engine/daemon/cookie.cc:626:15:
error: ?checkPrivilegeFailed? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2992/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10793/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2939/ : FAILURE

Compile error at [2020-04-03T14:58:43.658Z] ../kv_engine/daemon/cookie.cc:626:15:
error: ?checkPrivilegeFailed? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2939/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1987/ : FAILURE

Compile error at [2020-04-03T14:37:08.171Z] ../kv_engine/daemon/cookie.cc:626:15:
error: use of undeclared identifier "checkPrivilegeFailed"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1987/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/53/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
